--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
     <title>Grupp 3</title>
 </head>
 <body>
+    <h1 class="header">Labb 2 - Grupp 3</h1>
+    <div id="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
